--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "markdown-it-task-lists": "^2.1.1",
     "vuepress": "^1.9.7",
     "vuepress-plugin-fulltext-search": "^2.2.1",
-    "vuepress-plugin-one-click-copy": "^1.0.6",
     "vuepress-plugin-pangu": "^1.0.1",
     "vuepress-plugin-sitemap": "^2.3.1",
     "vuepress-plugin-smplayer": "^1.5.3",
     "vuepress-plugin-zooming": "^1.1.8",
     "vuepress-theme-vdoing": "^1.12.5"
+  },
+  "devDependencies": {
+    "vuepress-plugin-one-click-copy": "^1.0.6"
   }
 }
